# osmchinaoffset

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  osmchinaoffset.rb
cmake/: FindOsmium.cmake  FindProtozero.cmake
src/: coords_handler.hh  coords_offsetter.hh  main.cc  version.hh  version.hh.cmake.in
test/: coords_offsetter.test.cc  version.test.cc
